Scroll fix, overflow for link box

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ button {
 /* Boxes */
 #boxes {
   max-height: 400px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 .add-link {
   border: 2px dashed #666;
@@ -56,6 +56,7 @@ button {
   margin-bottom: 10px;
   cursor: pointer;
   position: relative;
+  overflow: hidden;
 }
 #boxes .box .box-delete {
   position: absolute;
